# ai_debug

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
case-studies/: README.md
docs/: integration.md
examples/minimal_app/: README.md  pubspec.yaml
examples/minimal_app/ios/Runner/: Info.plist
examples/minimal_app/ios/Runner.xcodeproj/: project.pbxproj
examples/minimal_app/lib/: main.dart
protos/: ai_debug.proto
rust/crates/ai_debug/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain.toml
rust/crates/ai_debug/src/: client.rs  events.rs  ffi.rs  files.rs  lib.rs  logs.rs  mcp.rs  mdns.rs  registry.rs  server.rs  state.rs
scripts/: generate_proto.sh  setup.sh
tools/: analyze.py  collector.py  tail.sh  watch.sh
