[workspace]
resolver = "2"
members = ["rust/crates/ai_debug"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Santo Shakil <shakil.mezbah@gmail.com>"]
repository = "https://github.com/santoshakil/ai_debug"
homepage = "https://github.com/santoshakil/ai_debug"
description = "Embedded MCP debug bridge for Flutter apps — log streaming + remote command execution for AI agents."
readme = "README.md"
keywords = ["mcp", "flutter", "debugging", "ai", "ffi"]
categories = ["development-tools::debugging"]
rust-version = "1.78"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "sync", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
prost = { version = "0.14", default-features = false, features = ["std", "derive"] }
prost-build = "0.14"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry"] }
once_cell = { version = "1", default-features = false, features = ["std"] }
parking_lot = "0.12"
anyhow = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
base64 = { version = "0.22", default-features = false, features = ["std"] }

# FFI + native port
irondash_dart_ffi = "0.2"

# MCP protocol (streamable HTTP transport + schema support)
rmcp = { version = "1", default-features = false, features = ["server", "server-side-http", "transport-streamable-http-server", "schemars"] }

# mDNS advertise
mdns-sd = { version = "0.19", default-features = false }

# FFI header gen (build-only)
cbindgen = { version = "0.29", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
